# mumaxXR

./: README.md  README.rst  pyproject.toml
.github/workflows/: publish.yml
mumaxXR/: pyproject.toml
mumaxXR/src/mumaxXR_timvgl/: OvfEngine.py
src/mumaxXR/: OvfEngine.py  __init__.py  scriptParser.py
src/mumaxxr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mumaxxr_timvgl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
